<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout2"
        app:layout_anchorGravity="center">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="260dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="49dp"
            android:background="@color/teal_700"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rdoGroup" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/register"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="129dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toTopOf="@id/textInputLayer2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayer2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayer2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayer2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conf_pass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rdoGroup"
            android:layout_width="188dp"
            android:layout_height="61dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

            <RadioButton
                android:id="@+id/rdoPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donor"
                android:textColor="#9E9E9E"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rdoBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Non-Profit"
                android:textColor="#A5A5A5"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="531dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="121dp"
            android:layout_height="29dp"
            android:layout_marginTop="25dp"
            android:text="@string/account_type"
            android:textColor="#A0A0A0"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/rdoGroup"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>