<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropoffHeading"
        tools:ignore="MissingConstraints"
        android:fontFamily="@font/raleway_bold"/>

    <Button
        android:id="@+id/deletePost"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/dark_orange"
        android:text="Delete Post"
        app:layout_constraintEnd_toEndOf="parent"
...
