<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_homedetail"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profilecard"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/npolist"
        android:icon="@drawable/ic_bookdetail"
        android:title="@string/NPOlisting"
        app:showAsAction="always" />

    <item
        android:id="@+id/favs"
        android:icon="@drawable/ic_star"
        android:title="@string/favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_pencildetail"
        android:title="@string/write_a_post"
        app:showAsAction="always" />

</menu>